--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "postcss": "^8.4.20",
     "svelte": "^3.54.0",
     "svelte-bootstrap-icons": "^2.3.1",
+    "svelte-dnd-action": "^0.9.22",
     "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   },
